--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,11 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.2
+Imports: 
+    data.table,
+    dplyr,
+    GenomicRanges,
+    IRanges,
+    Matrix,
+    stringr,
+    VariantAnnotation
