--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,12 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.2
 Imports: 
+    CompQuadForm,
     data.table,
     dplyr,
     GenomicRanges,
     IRanges,
     Matrix,
+    S4Vectors,
     stringr,
     VariantAnnotation
