--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,9 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.2
+SystemRequirements: 
+    raremetal,
+    raremetalworker
 Imports: 
     CompQuadForm,
     data.table,
