Fixed two-stage approach using SKAT.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(agg_test)
 import(Matrix)
 importClassesFrom(Matrix,dgCMatrix)
 importClassesFrom(Matrix,sparseMatrix)
-importFrom(CompQuadForm,davies)
+importFrom(CompQuadForm,liu)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(Matrix,Diagonal)
