--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
-Package: externalCov
+Package: RVcov
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Rare-Variant Aggregation Testing Using Externally Estimated Covariance
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Brady Ryan
+Maintainer: Brady Ryan <balr@umich.edu>
+Description: Package that estimates single-variant score statistic covariance 
+using a VCF from an external reference panel, and calls RAREMETAL to perform 
+rare-variant aggregation testing. Package is also able to perform our two-stage 
+approach of first performing the rare-variant aggregation test using the null
+covariance, and repeating it only if the -log10(p-value) is above some threshold.
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.2
